--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -14,3 +14,13 @@
 .card-body{
     border: 1px solid rgba(0,0,0,.125);
 }
+.small{
+    display: block;
+}
+.form-heading{
+    text-align:center; margin-top:15px; margin-bottom:30px;
+}
+p{
+    margin-top: 0;
+    margin-bottom: 0;
+}
