--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -8,6 +8,9 @@
                     <input class="form-control" type="text" name="campground[name]" value="<%= campground.name %>" required>
                 </div>
                 <div class="form-group">
+                    <input class="form-control" type="number" name="campground[price]" value="<% campground.price %>" min=".01" step="0.01">
+                </div>
+                <div class="form-group">
                     <input class="form-control" type="url" name="campground[image]" value="<%= campground.image %>" required>
                 </div>
                 <div class="form-group">
