--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,11 +1,14 @@
-<% include ../partials/header %>    
+<% include ../partials/header %>
     <div class="container">
         <h1 style="text-align:center; margin-top:15px; margin-bottom:30px; ">Create a New Campground</h1>
-        <div class="row">       
+        <div class="row">
             <div style="width:40%; margin:0 auto;">
             <form action="/campgrounds" method="POST">
                 <div class="form-group">
                     <input class="form-control" type="text" name="name" placeholder="Name" required>
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="number" name="price" placeholder="price" min="0.01" step="0.01">
                 </div>
                 <div class="form-group">
                     <input class="form-control" type="url" name="image" placeholder="Image URL" required>
