--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,7 +13,7 @@
             <div class="card">
                 <img class="img-fluid"src="<%= campground.image %>">
                 <div class="card-body">
-                    <h6 class="float-right">$9.00/night</h6>
+                    <h6 class="float-right">$<%= campground.price %>/night</h6>
                     <a href="#"><h4><strong><%= campground.name%></strong></h4></a>
                     <p><%- campground.description %></p>
                     <small>Created by <strong><em><%= campground.author.username %></em></strong></small>
@@ -34,7 +34,7 @@
                     <% campground.comments.forEach(function(comment){ %>
                         <div clas="row">
                             <strong><%= comment.author.username %></strong>
-                            <span class="float-right">10days ago</span>
+                            <!--<span class="float-right">10days ago</span>-->
                             <p><%- comment.text %></p>
                     <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
                             <small><a href="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>/edit">Edit</a></small>
