Add google maps

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -14,6 +14,9 @@
                     <input class="form-control" type="url" name="image" placeholder="Image URL" required>
                 </div>
                 <div class="form-group">
+                    <input class="form-control" type="text" name="location" placeholder="location" required>
+                </div>
+                <div class="form-group">
                     <textarea class="form-control" name="descr">add description here..
                     </textarea>
                 </div>
