--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -13,9 +13,9 @@
                 <div class="form-group">
                     <input class="form-control" type="url" name="campground[image]" value="<%= campground.image %>" required>
                 </div>
-                <div class="form-group">
+                <!-- <div class="form-group">
                     <input class="form-control" type="text" name="location" value="<%= campground.location %>" required>
-                </div>
+                </div> -->
                 <div class="form-group">
                     <textarea class="form-control" name="campground[description]"><%- campground.description %></textarea>
                 </div>
