--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -75,5 +75,5 @@
     });
   }
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBERLGTj8i1U-eWA1ylNRkwbj44oaL2Ju0&callback=initMap"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=API-KEY&callback=initMap"></script>
 <% include ../partials/footer.ejs %>
